# telegram_llm

./: docker-compose.yml  hello.py  pyproject.toml
src/: __init__.py  graph.py  init_db.sql  web_scrapping_exe.py  web_scrapping_food.py
