[project]
name = "telegram-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.9",
    "langchain-core>=0.3.21",
    "langchain-groq>=0.2.1",
    "langchain-openai>=0.2.10",
    "langgraph>=0.2.53",
    "matplotlib>=3.9.2",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.7",
    "requests>=2.32.3",
]
